# SocketServer

./: .gitignore  CMakeLists.txt  README.md  ServerArchitecture.drawio  make.sh
src/: CMakeLists.txt
src/CLI/: CMakeLists.txt  main.cpp
src/CLI/include/: CommandLine.hpp
src/CLI/src/: CommandLine.cpp
src/Core/: CMakeLists.txt
src/Core/AdminComponent/: CMakeLists.txt
src/Core/AdminComponent/include/: AdminConsole.hpp  ServerManager.hpp
src/Core/AdminComponent/src/: AdminConsole.cpp  ServerManager.cpp  main.cpp
src/Core/MessageComponent/: CMakeLists.txt
src/Core/MessageComponent/include/: MessageHandler.hpp
src/Core/MessageComponent/src/: MessageHandler.cpp
src/Core/NetworkComponent/: CMakeLists.txt
src/Core/NetworkComponent/include/: HttpHandler.hpp  ServerSocket.hpp
src/Core/NetworkComponent/src/: HttpHandler.cpp  ServerSocket.cpp
src/SocketServerComponent/: CMakeLists.txt
src/SocketServerComponent/include/: AdminInterface.hpp  BaseDataBase.hpp  BaseMessage.hpp  BaseSocket.hpp  CommandLine.hpp  ConnectionHandler.hpp  DataBase.hpp  ICommandLine.hpp  IDataBase.hpp  IMessage.hpp  ISocket.hpp  Logger.hpp  MessageHandler.hpp  ServerManager.hpp  Socket.hpp  SocketException.hpp  TcpSocket.hpp  TextMessage.hpp  UdpSocket.hpp  UseCases.hpp  User.hpp  UserDataBase.hpp
src/SocketServerComponent/src/: BaseDataBase.cpp  BaseMessage.cpp  BaseSocket.cpp  CommandLine.cpp  ConnectionHandler.cpp  DataBase.cpp  MessageHandler.cpp  ServerManager.cpp  Socket.cpp  SocketException.cpp  TcpSocket.cpp  TextMessage.cpp  UdpSocket.cpp  User.cpp  UserDataBase.cpp  main.cpp
src/SocketServerComponent/src/cfg/: settings.cfg
